<resources>
    <string name="app_name">FikriShoppy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="developer">Developer</string>
    <string name="tv_Silahkan">Silahkan Login Untuk Memakai Aplikasi</string>
    <string name="creatAcc">create new account</string>
    <string name="Create">Create a New Account</string>
    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>
    <string name="img_logo">Logo</string>
</resources>