<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#C3BB4E"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/iv_logo"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textAlignment="center"
            android:layout_below="@+id/iv_logo"
            android:id="@+id/tv_Silahkan1"
            android:layout_marginBottom="50dp"
            android:text="@string/tv_Silahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:id="@+id/et_Username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_Silahkan1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/hint_user"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_Username"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_pass"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textAlignment="center"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_Password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@drawable/btn_sign_in"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</LinearLayout>